# challenge-notification

./: docker-compose.yaml  main.py  pyproject.toml
config/: confi_db.py  settings.py
models/: model_notification.py
shemas/: notification.py
